<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.angry.harley.Android_Database_Harley"
    android:id="@+id/lay01"
    android:background="@drawable/harley">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TextView1"
        android:id="@+id/textView1"
        android:textColor="#f91a52"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:background="#11d4f2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button6"
        android:backgroundTint="#69252524"
        android:textColor="#f02f5c"
        android:onClick="addMember"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:backgroundTint="#69292727"
        android:textColor="#ee2d47"
        android:onClick="refreshMemberData"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:textColor="#eb353f"
        android:backgroundTint="#69424040"
        android:onClick="removeMember"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:id="@+id/button4"
        android:backgroundTint="#694f4949"
        android:textColor="#f0344a"
        android:onClick="searchMember"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:textColor="#f02e4b"
        android:backgroundTint="#69544e4e"
        android:onClick="quitAll"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
