<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.angry.harley.Remove_Member"
    android:background="@drawable/harley"
    android:id="@+id/lay3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView12"
        android:id="@+id/textView12"
        android:layout_marginTop="37dp"
        android:background="#fdf6f6"
        android:backgroundTint="#8bcff3f2"
        android:textColor="#f24d4d"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp" />

    <EditText
        android:layout_width="90sp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText12"
        android:background="#f9f9f9"
        android:layout_marginLeft="63dp"
        android:layout_marginStart="63dp"
        android:layout_alignTop="@+id/textView12"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:backgroundTint="#828aecdc"
        android:textColor="#f24d4d" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_below="@+id/editText12"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginTop="86dp"
        android:background="#6b561a1a"
        android:id="@+id/lay4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView9"
            android:id="@+id/textView9"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="24dp"
            android:background="#fdf6f6"
            android:backgroundTint="#8bcff3f2"
            android:textColor="#f24d4d"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextView10"
            android:id="@+id/textView10"
            android:layout_marginTop="41dp"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:textColor="#f24d4d"
            android:background="#fdf6f6"
            android:backgroundTint="#8bcff3f2" />

        <EditText
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText10"
            android:layout_alignBottom="@+id/textView10"
            android:layout_toRightOf="@+id/textView9"
            android:layout_toEndOf="@+id/textView9"
            android:layout_alignTop="@+id/textView10"
            android:background="#f9f9f9"
            android:backgroundTint="#828aecdc"
            android:textColor="#f24d4d" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView11"
            android:id="@+id/textView11"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:background="#fdf6f6"
            android:backgroundTint="#8bcff3f2"
            android:textColor="#f24d4d"
            android:textSize="16sp"
            android:layout_alignRight="@+id/textView10"
            android:layout_alignEnd="@+id/textView10"
            android:gravity="center" />

        <EditText
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText11"
            android:layout_alignBottom="@+id/textView11"
            android:layout_alignLeft="@+id/editText10"
            android:layout_alignStart="@+id/editText10"
            android:layout_alignTop="@+id/textView11"
            android:background="#f9f9f9"
            android:backgroundTint="#828aecdc"
            android:textColor="#f24d4d" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:text="@string/button8"
            android:id="@+id/button8"
            android:layout_marginBottom="46dp"
            android:backgroundTint="#69524c4c"
            android:textColor="#ed1e55"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="delete_Button"/>

    </RelativeLayout>

</RelativeLayout>
