<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.angry.harley.Refresh_Member_Data"
    android:background="@drawable/harley">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView5"
        android:id="@+id/textView5"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="139dp"
        android:background="#fdf6f6"
        android:textColor="#f24d4d"
        android:backgroundTint="#8bcff3f2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:id="@+id/spinner"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:background="#fdf6f6"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView6"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="32dp"
        android:background="#fdf6f6"
        android:backgroundTint="#8bcff3f2"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:gravity="center"
        android:textColor="#f24d4d"
        android:textSize="16sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/spinner"
        android:layout_alignStart="@+id/spinner"
        android:layout_alignTop="@+id/textView6"
        android:background="#f9f9f9"
        android:backgroundTint="#828aecdc"
        android:textColor="#f24242"
        android:editable="false" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textView3"
        android:id="@+id/textView7"
        android:backgroundTint="#697a7373"
        android:textColor="#ed4444"
        android:background="#fcf3f3"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="32dp"
        android:textSize="16sp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText7"
        android:backgroundTint="#7aa2efe6"
        android:textColor="#f46a6a"
        android:background="#f1fefb"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:editable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText8"
        android:layout_alignBottom="@+id/button7"
        android:layout_marginBottom="35dp"
        android:textColor="#f46a6a"
        android:background="#f1fefb"
        android:backgroundTint="#7aa2efe6"
        android:inputType="textCapWords"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7"
        android:id="@+id/button7"
        android:layout_marginTop="58dp"
        android:backgroundTint="#69524c4c"
        android:textColor="#ed1e55"
        android:onClick="update_Button7"
        android:layout_below="@+id/editText7"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

</RelativeLayout>
